--- a/marabou_test.ipynb
+++ b/marabou_test.ipynb
@@ -11,26 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "341ff72d-5134-49f4-bcec-8babea2717d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import maraboupy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02f9fe1a-8ae4-4b57-86af-21bd72145b67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(maraboupy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e4d30ace",
    "metadata": {},
    "outputs": [],
@@ -51,7 +31,8 @@
     "\n",
     "from interval import interval, inf, imath\n",
     "\n",
-    "from safe_train import *"
+    "from safe_train import *\n",
+    "from exploration_examples import safe_training_loop"
    ]
   },
   {
@@ -66,7 +47,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d3cb0e2d-38c8-4118-9908-4774b52d116f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "x = np.linspace(0, 10, 100)\n",
