--- a/multinode_projection.ipynb
+++ b/multinode_projection.ipynb
@@ -23,7 +23,8 @@
     "\n",
     "from interval import interval, inf, imath\n",
     "\n",
-    "from safe_train import *"
+    "from safe_train import *\n",
+    "from projection_examples import projection_training_loop"
    ]
   },
   {
