better projection algortihm

--- a/multinode_projection.ipynb
+++ b/multinode_projection.ipynb
@@ -774,6 +774,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96cb65ab-28f3-46d5-86f5-6c983a5b9346",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = np.arange(10, 20)\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8600d97-a41c-4f75-a959-a338a7a2af51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng()\n",
+    "train_indices = np.arange(nums.shape[0])\n",
+    "rng.shuffle(train_indices)\n",
+    "train_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b715bfdf-2380-4ee2-88a3-e2e6f839216a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums[train_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "53a316b4-2358-4449-95e5-1d3c52957cd1",
    "metadata": {},
    "outputs": [],
@@ -825,7 +859,7 @@
     "        layers.Dense(units=64, activation=\"relu\"),\n",
     "        layers.Dense(units=64, activation=\"relu\"),\n",
     "        layers.Dense(units=64, activation=\"relu\"),\n",
-    "        layers.Dense(units=4, activation=\"relu\"),\n",
+    "        layers.Dense(units=8, activation=\"relu\"),\n",
     "        # layers.Dense(units=10, activation=\"sigmoid\"),\n",
     "        layers.Dense(units=1, activation=\"linear\"),\n",
     "    ]\n",
@@ -878,7 +912,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out, penum = propagate_interval([interval[10, 20]], regression_model)\n",
+    "out, penum = propagate_interval(interval[10, 20], regression_model)\n",
     "out"
    ]
   },
@@ -958,11 +992,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "683ecacd-a23b-4d27-a6b0-176200b3013b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b53b0c-55a8-4299-a4e9-5b3c21c122c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "907eb9a1-2788-49e7-9176-0ef4c0b52760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elems = []\n",
+    "for elem in input_intervals:\n",
+    "    if elem[0][0] == elem[0][1]:\n",
+    "        elems.append((elem[0][0],))\n",
+    "    else:\n",
+    "        elems.append(elem[0])\n",
+    "elems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efbee723-d5ce-4fee-afa2-e0b339c003b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c6cd966c-bad0-4d72-a38b-c2c3ce5c4ff0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "t1 = time.time()\n",
     "proj = project_weights(goal_interval, input_intervals, theta, verbose=False)\n",
+    "t2 = time.time() - t1\n",
+    "print(t2)\n",
     "proj"
    ]
   },
@@ -1444,7 +1527,120 @@
     "print(\"status:\", prob.status)\n",
     "print(\"optimal value\", prob.value)\n",
     "print(f\"optimal values are: {np.round(x.value, 5)}\")\n",
-    "print(f\"took {tfinish - tstart} seconds\")"
+    "print(f\"took {tfinish - tstart} seconds\")\n",
+    "\n",
+    "interval[28.3, 49.1] * x.value[0] + interval[1,3] * x.value[1] + x.value[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50e86192-ed98-4e7f-b8d6-294abaa6466d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = cp.Variable((3,))\n",
+    "\n",
+    "constraints = [\n",
+    "    np.array([28.3, 1, 1]) @ x >= 10,\n",
+    "    np.array([49.1, 3, 1]) @ x <= 15,\n",
+    "    np.array([1, 0, 0]) @ x >= 0,\n",
+    "    np.array([0, 1, 0]) @ x >= 0,\n",
+    "]\n",
+    "\n",
+    "obj = cp.Minimize(\n",
+    "    cp.norm(x - np.array([0.158, 0.377, 1.79]))\n",
+    ")\n",
+    "# Form and solve problem.\n",
+    "prob = cp.Problem(obj, constraints)\n",
+    "import time\n",
+    "tstart = time.time()\n",
+    "prob.solve()  # Returns the optimal value.\n",
+    "tfinish = time.time()\n",
+    "print(\"status:\", prob.status)\n",
+    "print(\"optimal value\", prob.value)\n",
+    "print(f\"optimal values are: {np.round(x.value, 5)}\")\n",
+    "print(f\"took {tfinish - tstart} seconds\")\n",
+    "\n",
+    "interval[28.3, 49.1] * x.value[0] + interval[1,3] * x.value[1] + x.value[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952c5fbf-739b-4b66-8d95-633bd7485a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval[28.3, 49.1] * x.value[0] + interval[1,3] * x.value[1] + x.value[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b715991a-7996-406a-a37b-224278826b0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_intervals = [interval[28.3, 49.1], interval[1, 3], interval[0]]\n",
+    "[(elem[0]) for elem in input_intervals]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37c9b86b-5f27-4ce1-a929-87f8cfd51a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_intervals[2][0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957daca0-c8f7-4396-8e55-111a65d55cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d00878b-65b6-439a-92f9-c65ad2ac7110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx in range(3):\n",
+    "    print(input_intervals[idx][0][0] == input_intervals[idx][0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b653a78e-4a69-473d-89d2-53f0481dcea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elems = []\n",
+    "for elem in input_intervals:\n",
+    "    if (elem[0][0] == elem[0][1]):\n",
+    "        elems.append((elem[0][0],))\n",
+    "    else:\n",
+    "        elems.append(elem[0])\n",
+    "elems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf7a945-3b58-4057-ada7-54baebce7ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(\n",
+    "        itertools.product(*elems)\n",
+    "    )"
    ]
   },
   {
@@ -1461,6 +1657,10 @@
     "    np.array([49.1, 3, 1]) @ x <= 15,\n",
     "    np.array([28.3, 3, 1]) @ x >= 10,\n",
     "    np.array([49.1, 1, 1]) @ x <= 15,\n",
+    "    # np.array([28.3, 1, 1]) @ x <= 15,\n",
+    "    # np.array([49.1, 3, 1]) @ x >= 10,\n",
+    "    # np.array([28.3, 3, 1]) @ x <= 15,\n",
+    "    # np.array([49.1, 1, 1]) @ x >= 10,\n",
     "]\n",
     "\n",
     "obj = cp.Minimize(\n",
@@ -1474,7 +1674,42 @@
     "tfinish = time.time()\n",
     "print(\"status:\", prob.status)\n",
     "print(\"optimal value\", prob.value)\n",
-    "print(f\"optimal variables are x: {np.round(x.value, 5)}, y: {np.round(y.value, 5)}, z: {np.round(z.value, 5)}\")\n",
+    "print(f\"optimal values are: {np.round(x.value, 5)}\")\n",
+    "print(f\"took {tfinish - tstart} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d6ef25-0fae-4cb0-bf44-dd4759d81a6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = cp.Variable((3,))\n",
+    "\n",
+    "constraints = [\n",
+    "    np.array([28.3, 1, 1]) @ x >= 10,\n",
+    "    np.array([49.1, 3, 1]) @ x <= 15,\n",
+    "    np.array([28.3, 3, 1]) @ x >= 10,\n",
+    "    np.array([49.1, 1, 1]) @ x <= 15,\n",
+    "    np.array([28.3, 1, 1]) @ x <= 15,\n",
+    "    np.array([49.1, 3, 1]) @ x >= 10,\n",
+    "    np.array([28.3, 3, 1]) @ x <= 15,\n",
+    "    np.array([49.1, 1, 1]) @ x >= 10,\n",
+    "]\n",
+    "\n",
+    "obj = cp.Minimize(\n",
+    "    cp.norm(x - np.array([0.158, 0.377, 1.79]))\n",
+    ")\n",
+    "# Form and solve problem.\n",
+    "prob = cp.Problem(obj, constraints)\n",
+    "import time\n",
+    "tstart = time.time()\n",
+    "prob.solve()  # Returns the optimal value.\n",
+    "tfinish = time.time()\n",
+    "print(\"status:\", prob.status)\n",
+    "print(\"optimal value\", prob.value)\n",
+    "print(f\"optimal values are: {np.round(x.value, 5)}\")\n",
     "print(f\"took {tfinish - tstart} seconds\")"
    ]
   },
@@ -1558,7 +1793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
