update to label code snipped

--- a/mid dimensional projection.ipynb
+++ b/mid dimensional projection.ipynb
@@ -477,6 +477,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de803556-4f5e-4449-996c-c0fc2ad4dd91",
+   "metadata": {},
+   "source": [
+    "## Projection with multiple specs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "99672b72-3c49-4b5f-9879-3c50d7326326",
